--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "drizzle-orm": "^0.32.1",
     "next": "^14.2.19",
     "postgres": "^3.4.4",
+    "primeflex": "^4.0.0",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
